<resources>
    <string name="app_name">Cheffy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="onboarding_1_title_part1">Plan Your</string>
    <string name="onboarding_1_title_part2">Weekly Meals</string>
    <string name="onboarding_1_description">Organize your cooking schedule\nand save your daily time.</string>
    <string name="onboarding_2_title_part1">Discover</string>
    <string name="onboarding_2_title_part2">Global Cuisines</string>
    <string name="onboarding_2_description">Find recipes by ingredients\nand explore new tastes.</string>
    <string name="onboarding_3_title_part1">Your Favorites,</string>
    <string name="onboarding_3_title_part2">Anytime</string>
    <string name="onboarding_3_description">Access your recipes offline\nand sync across devices.</string>
    <string name="background_image">Background Image</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="or">Or</string>
    <string name="continue_as_a_guest">Continue as a Guest</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_description">Your meal plan is ready when you are</string>
    <string name="email">Email *</string>
    <string name="email_hint">username111@gmail.com</string>
    <string name="password">Password *</string>
    <string name="password_hint">******</string>
    <string name="forget_your_password">Forgot Your Password?</string>
    <string name="new_here">New here?</string>
    <string name="signup_description">Discover recipes from around the world</string>
    <string name="full_name">Full Name *</string>
    <string name="full_name_hint">Omar Khaled</string>
    <string name="confirm_password">Confirm Password *</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_description">Don\'t worry! It happens. Please enter the email address associated with your account.</string>
    <string name="email_address">Email Address</string>
    <string name="send_code">Send Code</string>
    <string name="remember_password">Remember Password?</string>
    <string name="hello">Hello,</string>
    <string name="user_name">Chef!</string>
    <string name="home_description">What do you want to cook today?</string>
    <string name="plan_section_title">Your Plan for Today</string>
    <string name="background_image_for_today_s_meal">Background image for today\'s meal</string>
    <string name="daily_inspiration_section">Daily Inspiration</string>
    <string name="background_image_for_daily_inspiration_s_meal">Background Image for Daily Inspiration\'s Meal</string>
    <string name="meal_of_the_day">Meal of the Day</string>
    <string name="categories">Categories</string>
    <string name="popular_recipes">Popular Recipes</string>
    <string name="see_all">See All</string>
    <string name="explore_cuisines">Explore Cuisines</string>
    <string name="search_bar_hint">Search for recipes...</string>
    <string name="meal_name">Meal Name</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="ingredient">Ingredient</string>
    <string name="explore_ingredients">Explore Ingredients</string>
    <string name="my_cookbook">My Cookbook</string>
    <string name="search_button_icon">Search Button Icon</string>
    <string name="all">All</string>
    <string name="food">Food</string>
    <string name="desserts">Desserts</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="plan">Plan</string>
    <string name="profile">Profile</string>
    <string name="planned">Planned</string>
    <string name="data_sync"><![CDATA[Data & Sync]]></string>
    <string name="general">General</string>
    <string name="weekly_plan">Weekly Plan</string>
    <string name="weekly_plan_description">Manage your meals for the week</string>
    <string name="no_meals_planned">No Meals Planned</string>
    <string name="add_meal">Add Meal</string>
    <string name="meal_details_description">Discover the taste of this amazing meal with our step-by-step guide.</string>
    <string name="instructions">Instructions</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="add_to_plan">Add to Plan</string>
    <string name="facebook_login_button">Facebook Login Button</string>
    <string name="google_login_button">Google Login Button</string>
    <string name="twitter_login_button">Twitter Login Button</string>
    <string name="add_to_favorite_button">Add to Favorite Button</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="error_state_desc">Please check your internet connection and try again. You can still view saved recipes.</string>
    <string name="view_saved_recipes">View Saved Recipes</string>
    <string name="try_again">Try Again</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="undo">Undo</string>
    <string name="no_favorites_yet">No Favorites Yet</string>
    <string name="no_favorites_description">Start adding your favorite meals and they\'ll show up here.</string>
    <string name="added_to_favorites">Added to favorites!</string>
    <string name="meals_for_day">Meals for %1$s</string>
    <string name="meal_removed_from_plan">Meal removed from plan</string>
    <string name="meal_added_to_plan">Added to %1$s\'s plan</string>
    <string name="select_day">Select Day</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="restoring_backup">Restoring backup…</string>
    <string name="sign_in">Sign In</string>
    <string name="go_to_recipe"><![CDATA[Go to recipe ->]]></string>
</resources>