<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/ivFoodImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="-40dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background_image"
        app:layout_constraintBottom_toTopOf="@+id/bottomCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/onboarding_plan" />

    <LinearLayout
        android:id="@+id/bottomCard"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/white_card_bg"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:paddingTop="32dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvTitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/onboarding_1_title_part1"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-8dp"
            tools:text="@string/onboarding_1_title_part2"
            android:textColor="@color/primary_color"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="4dp"
            tools:text="@string/onboarding_1_description"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>