<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    tools:context=".ui.FavoritesFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:fontFamily="serif"
        android:text="@string/my_cookbook"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnSearchFavs"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/circle_btn_bg"
        android:padding="10dp"
        android:src="@drawable/search"
        app:tint="@color/black"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/search_button_icon"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitle" />

    <EditText
        android:id="@+id/etSearchLocal"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/search_bar_bg"
        android:hint="@string/search_bar_hint"
        android:paddingHorizontal="16dp"
        android:textSize="14sp"
        android:maxLines="1"
        android:inputType="text"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"/>

    <HorizontalScrollView
        android:id="@+id/scrollFilters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:paddingHorizontal="20dp"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/etSearchLocal">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupFavs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            app:selectionRequired="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipAll"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:checked="true"
                android:textColor="@color/black"
                app:chipBackgroundColor="@color/chip_state_list_bg"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFood"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food"
                android:textColor="@color/black"
                app:chipBackgroundColor="@color/chip_state_list_bg"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipDessert"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desserts"
                android:textColor="@color/black"
                app:chipBackgroundColor="@color/chip_state_list_bg"/>

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFavorites"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:clipToPadding="false"
        android:paddingHorizontal="16dp"
        android:paddingBottom="100dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollFilters"
        tools:listitem="@layout/item_fav_meal" />


</androidx.constraintlayout.widget.ConstraintLayout>